piccraft_first_pro

--- a/web.html
+++ b/web.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="piccraft.css">
 </head>
-<body>
-    My Website
+<body><div class="home">
+    <main>
+        <section>
+            <img class="thumbnail" src="thumbnails/photo.jpg" alt="profile"> 
+            <h1>jessica randall</h1>
+            <h3 class="location"> London, United Kingdom<br> </h3>
+        <p>"frontend developer and acid maker"</p>
+        </section> <br>
+        <section >
+                <div><a href="https://github.com/">
+                    <button >github</button></a>
+                </div><br>
+                <div> <a href="https://www.w3schools.com/">
+                    <button >front material</button></a>
+                </div><br>
+                <div><a href="https://www.linkedin.com/learning/">
+                    <button >linkdin</button></a>
+                </div><br>
+                <div> <a href="https://www.tiktok.com/">
+                    <button >Tiktok</button></a>
+                </div><br>
+                <div><a href="https://www.instagram.com/">
+                     <button >Instagram</button></a>
+                    </div><br>
+              
+        </section>
+    </main>
+    </div>
 </body>
 </html>
